fix cal-wrap css

--- a/modules/Calendar/Calendar.scss
+++ b/modules/Calendar/Calendar.scss
@@ -185,7 +185,7 @@ $background-color: #f7f7f7;
         margin-top: 10px;
         font-size: 12px;
 
-        &:first-child {
+        &:nth-child(2) {
             margin-right: 10px;
         }
 
